; ModuleID = '/home/carl/AnghaBench/libgit2/tests/attr/extr_repo.c_test_attr_repo__staging_properly_normalizes_line_endings_according_to_gitattributes_directives.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/attr/extr_repo.c_test_attr_repo__staging_properly_normalizes_line_endings_according_to_gitattributes_directives.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c".gitattributes\00", align 1
@GITATTR = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"text.txt\00", align 1
@.str.2 = private unnamed_addr constant [41 x i8] c"22c74203bace3c2e950278c7ab08da0fca9f4e9b\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"huh.dunno\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"binary.data\00", align 1
@.str.5 = private unnamed_addr constant [41 x i8] c"66eeff1fcbacf589e6d70aa70edd3fce5be2b37c\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_attr_repo__staging_properly_normalizes_line_endings_according_to_gitattributes_directives() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @g_repo, align 4
  %3 = call i32 @git_repository_index(i32** %1, i32 %2)
  %4 = call i32 @cl_git_pass(i32 %3)
  %5 = load i32, i32* @GITATTR, align 4
  %6 = call i32 @add_to_workdir(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @assert_proper_normalization(i32* %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0))
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @assert_proper_normalization(i32* %9, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.2, i64 0, i64 0))
  %11 = load i32*, i32** %1, align 8
  %12 = call i32 @assert_proper_normalization(i32* %11, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.5, i64 0, i64 0))
  %13 = load i32*, i32** %1, align 8
  %14 = call i32 @git_index_free(i32* %13)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @add_to_workdir(i8*, i32) #1

declare dso_local i32 @assert_proper_normalization(i32*, i8*, i8*) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
